Slight change in wording.

--- a/About.Rmd
+++ b/About.Rmd
@@ -118,7 +118,7 @@
 <br>
 <p>Planning for Calm supports self-directed and independent use of mindfulness, helping to develop students who can better navigate the ups and downs of university life, who are more resilient and ready for the workplace.</p>
 <br>
-<p>Results from the Planning for Calm project have recently been presented at the 12th Annual University of Glasgow Learning and Teaching Conference.</p>
+<p>Initial results from Planning for Calm have recently been presented at the 12th Annual University of Glasgow Learning and Teaching Conference.</p>
 <br>
 <br>
 
