--- a/About.Rmd
+++ b/About.Rmd
@@ -23,7 +23,7 @@
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
 
-  <title>About | Planning for Calm</title>
+  title: About | Planning for Calm
   
   <style>
   
@@ -101,6 +101,7 @@
 
 </head>
 <body>
+
 <img src="pfc_images/about_banner.jpg" style="width: 100%">
 <br>
 <h2 class="uppercase">About</h2>
